--- a/aula89/aula89.html
+++ b/aula89/aula89.html
@@ -7,6 +7,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="tabela">
+        <table>
+            <tr>
+                <th>Equipamento</th>
+                <th>Quantidade</th>
+                <th>Valor</th>
+            </tr>
+            <tr>
+                <td>Mouse</td>
+                <td>01</td>
+                <td>R$25,00</td>
+            </tr>
+
+            <tr>
+                <td>Teclado</td>
+                <td>01</td>
+                <td>R$85,00</td>
+            </tr>
+
+            <tr>
+                <td>Monitor</td>
+                <td>01</td>
+                <td>R$650,00</td>
+            </tr>
+        </table>
+    </div>
+    <button id="btn_imprimir">Imprimir</button>
     <script src="aula89.js"></script>
 </body>
 </html>
