Atualizei os arquivos da aula96

--- a/aula96/aula96.html
+++ b/aula96/aula96.html
@@ -36,6 +36,6 @@
         
     </div>
 
-    <script src="aula96.js"></script>
+    <script src="aula96.js" type="module"></script> <!--Sempre usar isso-->
 </body>
 </html>
