--- a/aula146(Aprendendo criar uma tela de login em Javascript do tipo módulo)/aula146.html
+++ b/aula146(Aprendendo criar uma tela de login em Javascript do tipo módulo)/aula146.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 145 de JavaScript</title>
+    <title>Aula 146 de JavaScript</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div id="fundoLogin" class="fundoLogin">
+    <!-- <div id="fundoLogin" class="fundoLogin"> ok
         <div id="baseLogin" class="baseLogin">
             <div id="elementosLogin" class="elementosLogin">
                 <div class="campoLogin">
@@ -33,8 +33,8 @@
             </div>
 
         </div>
-    </div>
-    <script src="aula145.js" type="module"></script>
+    </div> -->
+    <script src="aula146.js" type="module"></script>
 </body>
 
 </html>
