Criei um link para meu modulo via CDN

--- a/aula150(Disponibilizando conteúdo via CDN-tela-login)/aula150.html
+++ b/aula150(Disponibilizando conteúdo via CDN-tela-login)/aula150.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula 150 de JavaScript</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- Este é o meu módulo via CDN -->
+    <script src="https://cdn.jsdelivr.net/gh/viniciusjuste/Curso-JavaScript/aula150(Disponibilizando%20conte%C3%BAdo%20via%20CDN-tela-login)/login.js
+    "></script>
 </head>
 
 <body>
