--- a/aula235(Controle-de-Estoque)/backoffice/index.html
+++ b/aula235(Controle-de-Estoque)/backoffice/index.html
@@ -17,7 +17,7 @@
                     class="btn_item_menu">Pessoas</button></a>
             <a href="../fornecedores/fornecedores.html" target="f_principal"><button
                     class="btn_item_menu">Fornecedores</button></a>
-            <button class="btn_item_menu">CFB Cursos</button>
+            <a href="../produtos/produtos.html" target="f_principal"><button class="btn_item_menu">Produtos</button></a>
             <button class="btn_item_menu">CFB Cursos</button>
             <button class="btn_item_menu">CFB Cursos</button>
         </div>
