--- a/aula238(Controle-de-Estoque)/produtos/produtos.html
+++ b/aula238(Controle-de-Estoque)/produtos/produtos.html
@@ -96,7 +96,8 @@
                 <div class="campo_form">
                     <label for="f_statusprod">Status do produto:</label>
                     <select name="f_statusprod" id="f_statusprod">
-                        <option>Teste</option>
+                        <option value="A">Ativo</option>
+                        <option value="I">Inativo</option>
                     </select>
                 </div>
             </div>
