--- a/aula239(Controle-de-Estoque)/produtos/produtos.html
+++ b/aula239(Controle-de-Estoque)/produtos/produtos.html
@@ -148,7 +148,7 @@
             <div id="tituloGrid" class="tituloGrid">
                 <div class="colunaTituloGrid c1">Id</div>
                 <div class="colunaTituloGrid c2">Nome</div>
-                <div class="colunaTituloGrid c3">Tipo</div>
+                <div class="colunaTituloGrid c3">Qtde</div>
                 <div class="colunaTituloGrid c4">Status</div>
                 <div class="colunaTituloGrid c5">Operações</div>
             </div>
