--- a/falso-login/index.html
+++ b/falso-login/index.html
@@ -29,7 +29,7 @@
                             <input type="password" name="f_password" id="f_password">
                         </div>
 
-                        <a id="btn_login" href="code.html" target="_self">ENTRAR</a>
+                        <a id="btn_login" href="#" target="_self">ENTRAR</a>
 
                         <a href="https://siga.cps.sp.gov.br/fatec/sis_login_auxiloproblemas.aspx"
                             target="_self">Soluções para problemas no Acesso</a>
