--- a/form-identificacao-risco/index.html
+++ b/form-identificacao-risco/index.html
@@ -1,50 +1,61 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Formulario</title>
-    <link rel="stylesheet" href="style.css">
-    
-</head>
-<body>
-   <div class="formtH1">
-    <h1>Identificação de Riscos de TI</h1>
-   </div>
-    <div class="form-container">
-        <form>
-            <div class="mb-3">
-              <label for="f_nameDawn" class="form-label">Nome do Alvo:</label>
-              <input type="text" class="form-control" id="f_nameDawn">
-            <div class="mb-3">
-              <label for="f_valueDawn" class="form-label">Valor do Alvo:</label>
-              <input type="number" value="0" class="form-control" id="f_valueDawn">
-            </div>
-            <div class="mb-3">
-                <label for="f_probabilityRisk" class="form-label">Probabilidade de Risco:</label>
-                <select id="f_probabilityRisk" class="form-select">
-                    <option value="">Selecione</option>
-                    <option value="A">Alto</option>
-                    <option value="M">Médio</option>
-                    <option value="B">Baixo</option>
-                  </select>
-              </div>
-              <div class="mb-3">
-                <label for="severityImpact" class="form-label">Severidade do impacto:</label>
-                <select id="severityImpact" class="form-select">
-                    <option value="">Selecione</option>
-                    <option value="A">Alto</option>
-                    <option value="M">Médio</option>
-                    <option value="B">Baixo</option>
-                  </select>
-              </div>
-            <button type="submit" class="btn btn-primary">Avaliar Risco</button>
-        </form>
-    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <title>Formulario</title>
+  <link rel="stylesheet" href="style.css">
+
+</head>
+
+<body>
+  <div class="formtH1">
+    <h1>Identificação de Riscos de TI</h1>
+  </div>
+  <div class="form-container">
+    <form id="form_riskIdentification">
+      <div class="mb-3">
+        <label for="f_nameDawn" class="form-label">Nome do Alvo:</label>
+        <input type="text" class="form-control" id="f_nameDawn">
+        <div class="mb-3">
+          <label for="f_valueDawn" class="form-label">Valor do Alvo:</label>
+          <input type="number" value="0" class="form-control" id="f_valueDawn">
+        </div>
+        <div class="mb-3">
+          <label for="probabilityRisk" class="form-label">Probabilidade de Risco:</label>
+          <select id="probabilityRisk" class="form-select">
+            <option value="">Selecione</option>
+            <option value="3">Alto</option>
+            <option value="2">Médio</option>
+            <option value="1">Baixo</option>
+          </select>
+        </div>
+        <div class="mb-3">
+          <label for="severityImpact" class="form-label">Severidade do impacto:</label>
+          <select id="severityImpact" class="form-select">
+            <option value="">Selecione</option>
+            <option value="3">Alto</option>
+            <option value="2">Médio</option>
+            <option value="1">Baixo</option>
+          </select>
+        </div>
+        <button type="submit" class="btn btn-primary" id="btn_risk">Avaliar Risco</button>
+        <!-- <div class="showRisk">
+              <p>Resultado do Avaliação:</p>
+              <p>Ativo: HP velho</p>
+              <p>Pontuação do risco: 300</p>
+              <p>Nivel do risco: Baixo</p>
+            </div> -->
+    </form>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script src="index.js"></script>
 </body>
+
 </html>
